[gd_scene load_steps=5 format=3 uid="uid://ds3xw7ve4kou5"]

[ext_resource type="PackedScene" uid="uid://qy2h6hipkt5t" path="res://Scenes/Player/Cat.tscn" id="1_sau32"]
[ext_resource type="Script" path="res://Scenes/Street/street.gd" id="1_vharl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bv2v"]
size = Vector2(58, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbni7"]
size = Vector2(1225, 170)

[node name="Street" type="Node2D"]
script = ExtResource("1_vharl")

[node name="FishDoor" type="Area2D" parent="."]
position = Vector2(482, 370)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishDoor"]
position = Vector2(2, 68)
shape = SubResource("RectangleShape2D_3bv2v")

[node name="ColorRect" type="ColorRect" parent="FishDoor"]
offset_left = -27.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 127.0
color = Color(0.167575, 0.594729, 1, 1)

[node name="Cat" parent="." instance=ExtResource("1_sau32")]
position = Vector2(150, 354)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -42.0
offset_top = 498.0
offset_right = 1178.0
offset_bottom = 662.0
color = Color(1, 0.653245, 0.783397, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(569.5, 581)
shape = SubResource("RectangleShape2D_kbni7")

[connection signal="body_entered" from="FishDoor" to="." method="_on_fish_door_body_entered"]
[connection signal="body_exited" from="FishDoor" to="." method="_on_fish_door_body_exited"]
